--- a/project.yml
+++ b/project.yml
@@ -1,6 +1,6 @@
-name: OpenAPIClient
+name: RebrickableLegoAPIClient
 targets:
-  OpenAPIClient:
+  RebrickableLegoAPIClient:
     type: framework
     platform: iOS
     deploymentTarget: "11.0"
